<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Push Sample</string>

    <string name="action_about">About</string>
    <string name="action_clear_events">Clear Unsent Events</string>
    <string name="action_clear_registration">Clear Registration</string>
    <string name="action_edit_preferences">Edit Preferences</string>
    <string name="action_register">Register</string>
    <string name="action_reset_preferences">Reset to Defaults</string>
    <string name="action_send_message">Send Message</string>
    <string name="action_unregister">Unregister</string>
    <string name="application_version">"Application version: "</string>
    <string name="pcf_hearbeat_message">This heartbeat message was sent at %1$s.</string>
    <string name="pcf_message_by_device_uuid">This message was sent to this device UUID at %1$s.</string>
    <string name="pcf_message_by_tags">This message was sent to the tags [%1$s] at %2$s.</string>
    <string name="pcf_message_by_custom_user_ids">This message was sent to custom user IDs [%1$s] at %2$s.</string>
    <string name="pcf_message_request_accepted">"PCF Push server accepted network request to send message. HTTP response status code is: "</string>
    <string name="pcf_parse_error">"ERROR: got exception parsing network response from PCF Push server: "</string>
    <string name="pcf_sending_message">Sending message via PCF Push server&#8230;</string>
    <string name="pcf_server_send_message_error">"PCF Push server rejected network request to send message. HTTP response status code is: "</string>
    <string name="clear_pcf_push_device_registration">Clearing device registration from the PCF Push</string>
    <string name="clear_registrations">Clear Registrations</string>
    <string name="clearing_gcm_device_registration">Clearing device registration from GCM</string>
    <string name="component_versions">\n\nPivotal CF\ncomponent versions:\n\n</string>
    <string name="deleted_message_server">Deleted messages on server: %1$s</string>
    <string name="error_reading_file">ERROR reading %1$s file: %2$s</string>
    <string name="external_files_dir_error">ERROR: Was not able to get the externalFilesDir</string>
    <string name="gcm_message">"This message was sent to GCM at "</string>
    <string name="gcm_message_request_accepted">"GCM server accepted network request to send message. HTTP response status code is: "</string>
    <string name="gcm_message_send_message_error">"GCM server rejected network request to send message. HTTP response status code is: "</string>
    <string name="gcm_parse_error">"ERROR: got exception posting message to GCM server: "</string>
    <string name="gcm_sending_message">Sending message via GCM&#8230;</string>
    <string name="log_copied">Log copied to clipboard</string>
    <string name="log_item_copied">Log item copied to clipboard</string>
    <string name="log_item_title">Log Item</string>
    <string name="message_body_data">"Message body data: "</string>
    <string name="need_to_be_registered_error">Can not send message. Please register first.</string>
    <string name="ok">OK</string>
    <string name="pref_title_pcf_api_key">API Key</string>
    <string name="pref_title_pcf_app_uuid">Application UUID</string>
    <string name="pref_title_pcf_push_preferences">Pivotal CF Push Preferences</string>
    <string name="pref_title_pcf_registration_preferences">Pivotal CF Registration Preferences</string>
    <string name="pref_title_device_alias">Device Alias</string>
    <string name="pref_title_gcm_browser_api_key">GCM Browser API Key</string>
    <string name="pref_title_gcm_push_preferences">GCM Push Preferences</string>
    <string name="pref_title_gcm_registration_preferences">GCM Registration Preferences</string>
    <string name="pref_title_gcm_sender_id">GCM Sender ID</string>
    <string name="pref_title_push_base_server_url">Push Base Server URL</string>
    <string name="pref_title_registration_preferences">Registration Preferences</string>
    <string name="pref_title_variant_secret">Variant Secret</string>
    <string name="pref_title_variant_uuid">Variant UUID</string>
    <string name="read_file_error">ERROR: %1$s file not found (%2$s). Have you registered with GCM and PCF Push successfully? Are you running a debug build? Is the external cache directory accessible? Did you allow permission to write to external storage?</string>
    <string name="received_message">Received: \"%1$s\".</string>
    <string name="received_message_deleted">Received message with type \'MESSAGE_TYPE_DELETED\'.</string>
    <string name="received_message_no_extras">Received message with no extras.</string>
    <string name="received_message_send_error">Received message with type \'MESSAGE_TYPE_SEND_ERROR\'.</string>
    <string name="registration_failed">"Registration failed. Reason is: "</string>
    <string name="registration_instructions">Press the \"Register\" button to attempt registration.</string>
    <string name="registration_params">GCM Sender ID: \'%1$s\'\nVariant UUID: \'%2$s\nVariant Secret: \'%3$s\'\nDevice Alias: \'%4$s\'\nBase Server URL: \'%5$s\'.</string>
    <string name="registration_successful">Registration successful. The device UUID is:</string>
    <string name="subscribe_to_tags_successful">Successfully subscribed to tags.</string>
    <string name="subscribe_to_tags_failed">"Failed to subscribe to tags: "</string>
    <string name="release_build_error">This feature does not work in release builds.</string>
    <string name="sdcard_error">This feature requires the SD-card to be mounted.</string>
    <string name="send_error">Send error: %1$s</string>
    <string name="send_message_title">Send Message</string>
    <string name="starting_registration">Starting registration&#8230;</string>
    <string name="starting_unregistration">Starting unregistration&#8230;</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="unregistration_failed">"Unregistration failed. Reason is: "</string>
    <string name="unregistration_successful">Unregistration successful.</string>
    <string name="action_subscribe_to_tags">Subscribe to Tags</string>
    <string name="starting_subscribe_to_tags">Starting subscribe to tags&#8230;</string>
    <string name="send_to_tags_title">Send to Tags</string>
    <string name="subscribe_to_tags_title">Subscribe to Tags</string>
    <string name="cancel">Cancel</string>
    <string name="subscribe">Subscribe</string>
    <string name="send">Send</string>

    <string-array name="clear_registrations">
        <item>GCM</item>
        <item>PCF Push</item>
        <item>Both</item>
        <item>Cancel</item>
    </string-array>

    <string-array name="copy_items">
        <item>Copy Item</item>
        <item>Copy All Items</item>
        <item>Clear Log</item>
        <item>Cancel</item>
    </string-array>

    <string-array name="send_via_items">
        <item>Via GCM</item>
        <item>Via PCF Push</item>
        <item>Via PCF Push Tags</item>
        <item>Via PCF Push Custom User ID</item>
        <item>Heartbeat</item>
        <item>Cancel</item>
    </string-array>

    <string-array name="tags">
        <item>ALPHA</item>
        <item>BETA</item>
        <item>GAMMA</item>
        <item>DELTA</item>
        <item>PCF.PUSH.HEARTBEAT</item>
    </string-array>

    <string name="title_activity_geofence">Geofences</string>
    <string name="action_geofence">Geofences</string>
    <string name="received_geofence_enter">Entered geofence.</string>
    <string name="received_geofence_exit">Exited geofence.</string>
    <string name="geofence_entered">Entered geofence: %1$s</string>
    <string name="geofence_exited">Exited geofence: %1$s</string>
    <string name="error_making_test_providers">"Error setting up test location providers: "</string>
    <string name="pref_title_are_geofences_enabled">Geofences Enabled</string>
    <string name="geofence_permission">The Push Sample app needs to read your location in order to monitor geofences and send you a notification when you enter monitored locations.</string>
    <string name="maps_requires_location_permission">Android permission ACCESS_FINE_LOCATION required to use the map activity.</string>
    <string name="request_write_external_storage_permission">The Push Sample app needs to write to external storage in order to help you send debug push messages and view your currently monitored geofences.</string>
    <string name="pcf_sending_heartbeat_message">Requesting heartbeat message…</string>
    <string name="received_heartbeat_message">Received heartbeat. Count: %1$d.</string>
    <string name="pref_title_custom_user_id">Custom User ID</string>
    <string name="google_maps_sd_card">You need to have a mounted SD-card on your device before you can use Google Maps.</string>
    <string name="push_to_custom_user_id">Push to Custom User ID</string>
    <string name="push">Send Push</string>
    <string name="push_to_custom_user_id_log">Pushing to custom user ID \'%s\'.</string>
    <string name="custom_user_id_empty">Custom User ID can not be empty.</string>
    <string name="custom_user_id_instructions">You can target multiple custom user IDs by separating them with commas.\n\nPlease note that custom user IDs are case-sensitive.</string>
</resources>
